--- a/aboutme.html
+++ b/aboutme.html
@@ -18,7 +18,7 @@
 
   <main>
     <h1>About Me</h1>
-    <p>This is the second page of my website. My name is Catherine, a New York native but grew up in Germany due to being in a military family. Currently working in the hospitality industry, but have worked in customer service and marketing industry for over 8 years. I studied Psychology, and earned her degree at The University of Maryland. At work I strive to help clients feel at ease and is committed to ensuring they have a seamless, stress-free experience. I love to answer questions and engage with clients. I strive to give each guest and team member a positive, welcoming, and lasting experience.</p>
+    <p>This is the second page of my new website. My name is Catherine, a New York native but grew up in Germany due to being in a military family. Currently working in the hospitality industry, but have worked in customer service and marketing industry for over 8 years. I studied Psychology, and earned her degree at The University of Maryland. At work I strive to help clients feel at ease and is committed to ensuring they have a seamless, stress-free experience. I love to answer questions and engage with clients. I strive to give each guest and team member a positive, welcoming, and lasting experience.</p>
   </main>
 </body>
 </html>
