Contact Us page added

--- a/aboutme.html
+++ b/aboutme.html
@@ -12,13 +12,27 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="aboutme.html">About Me</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
       </ul>
     </nav>
   </header>
 
   <main>
-    <h1>About Me</h1>
-    <p>This is the second page of my new website. My name is Catherine, a New York native but grew up in Germany due to being in a military family. Currently working in the hospitality industry, but have worked in customer service and marketing industry for over 8 years. I studied Psychology, and earned her degree at The University of Maryland. At work I strive to help clients feel at ease and is committed to ensuring they have a seamless, stress-free experience. I love to answer questions and engage with clients. I strive to give each guest and team member a positive, welcoming, and lasting experience.</p>
+  <h1>About Me</h1>
+
+  <p>I have an immense love for sweets, pastries, and donuts. There's something magical about the combination of sugar, flour, and butter that never fails to bring a smile to my face. The way these ingredients come together to create delectable treats is simply irresistible. Whether it's a moist and fluffy cupcake, a buttery croissant, or a perfectly glazed donut, I find joy in every bite.</p>
+
+  <div class="image-paragraph">
+    <img src="https://hips.hearstapps.com/ghk.h-cdn.co/assets/17/45/3200x1600/landscape-1510067679-baked-by-melissa-chocolate-sundae-cupcake-index-1217.jpg?resize=1200:*" alt="Image 1" class="image">
+    <p>Sweets, in all their forms, have the power to transport me to a place of pure joy. Whether it's indulging in a rich and creamy chocolate cake, savoring a delicate macaron, or devouring a mouthwatering slice of pie, each bite is an experience filled with happiness. The explosion of flavors and textures dancing on my taste buds is an enchanting journey that I never want to end.</p>
+  </div>
+
+  <p>When it comes to pastries, I find myself captivated by their artistry. From flaky croissants to decadent fruit tarts, the intricate layers and delicate flavors never cease to amaze me. The symphony of buttery goodness, coupled with the sweet harmony of fresh fruits and luscious creams, creates a heavenly combination. Each pastry is a work of edible art, meticulously crafted to tantalize both the eyes and the palate.</p>
+
+  <div class="image-paragraph">
+    <p>And then there are donuts, those glorious circles of fried dough. Whether glazed, filled with a burst of creamy goodness, or generously topped with colorful sprinkles, they are a delightful treat that brings comfort and satisfaction with every bite. Donuts have a special place in my heart, and I am always on the lookout for unique and creative flavors to satisfy my cravings. Exploring local bakeries and discovering hidden gems that offer unconventional donut flavors is one of my favorite pastimes.</p>
+    <img src="https://hips.hearstapps.com/del.h-cdn.co/assets/15/40/3200x1600/landscape-1443543639-dunkdonuts.jpg?resize=1200:*" alt="Image 2" class="image">
+  </div>
   </main>
 </body>
 </html>
