--- a/index.html
+++ b/index.html
@@ -12,15 +12,14 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="aboutme.html">About Me</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
       </ul>
     </nav>
   </header>
 
   <main>
     <h1>Welcome to My Website</h1>
-    <p>
-        My name is Catherine, a New York native but grew up in Germany due to being in a military family. Currently working in the hospitality industry, but have worked in customer service and marketing industry for over 8 years. I studied Psychology, and earned her degree at The University of Maryland. At work I strive to help clients feel at ease and is committed to ensuring they have a seamless, stress-free experience. I love to answer questions and engage with clients. I strive to give each guest and team member a positive, welcoming, and lasting experience.
-    </p>
+    <p>My name is Catherine, a New York native but grew up in Germany due to being in a military family. Currently working in the hospitality industry, but have worked in customer service and marketing industry for over 8 years. I studied Psychology, and earned her degree at The University of Maryland. At work I strive to help clients feel at ease and is committed to ensuring they have a seamless, stress-free experience. I love to answer questions and engage with clients. I strive to give each guest and team member a positive, welcoming, and lasting experience.</p>
     <div class="slideshow-container">
       <div class="slide">
         <img src="https://preview.redd.it/q6m654xp4yg71.png?auto=webp&s=8dae31d687b176765fba6f98633e0627fd23af94" alt="Image 1">
