--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact Us | My Website</title>
+  <meta name="description" content="Get in touch with us for any inquiries or feedback. Fill out the contact form to reach out to us via email.">
+  <meta name="content-type" content="text/html">
   <link rel="stylesheet" href="stylespractice.css">
-  <title>Contact Us</title>
 </head>
 <body>
   <header>
@@ -13,6 +15,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="aboutme.html">About Me</a></li>
         <li><a href="contact.html">Contact Us</a></li>
+        <li><a href="responsive-practice.html">Experimental</a></li>
       </ul>
     </nav>
   </header>
