--- a/aboutme.html
+++ b/aboutme.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About Me | My Website</title>
+  <meta name="description" content="Learn about me and my love for sweets, pastries, and donuts. Explore the magical combination of sugar, flour, and butter that brings joy to my life.">
+  <meta name="content-type" content="text/html">
   <link rel="stylesheet" href="stylespractice.css">
-  <title>About Me</title>
 </head>
 <body>
   <header>
@@ -13,6 +15,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="aboutme.html">About Me</a></li>
         <li><a href="contact.html">Contact Us</a></li>
+        <li><a href="responsive-practice.html">Experimental</a></li>
       </ul>
     </nav>
   </header>
