Experimental Page Update

--- a/responsive-practice.html
+++ b/responsive-practice.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Responsive Practice</title>
+  <title>Experimental | My Website</title>
   <link rel="stylesheet" href="stylespractice.css">
   <style>
     /* Your responsive layout CSS for responsive-practice.html goes here */
@@ -22,8 +22,8 @@
     </nav>
   </header>
   <main>
-    <h1>Welcome to My Website</h1>
-    <p>This is the home page of my website. Here you can find some interesting content.</p>
+    <h1>Experimental Page</h1>
+    <p>This page is being used to test layouts and reactive designs. Also used to admire how adorable puppies are.</p>
     <div class="slideshow-container">
       <div class="slide">
         <img src="https://upload.wikimedia.org/wikipedia/commons/6/6e/Golde33443.jpg" alt="Image 1">
